--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "add": "^2.0.6",
     "baseui": "^10.7.1",
     "boring-avatars": "^1.6.1",
+    "canvas": "^2.9.0",
+    "chrome-aws-lambda": "^10.1.0",
     "jdenticon": "^3.1.1",
     "next": "^12.0.8",
     "next-head-seo": "^0.1.3",
+    "playwright": "^1.18.1",
+    "puppeteer-core": "^13.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sass": "^1.47.0",
