--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "^12.0.8",
     "next-head-seo": "^0.1.3",
     "playwright": "^1.18.1",
+    "playwright-aws-lambda": "^0.7.0",
     "puppeteer-core": "^13.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
